--- a/WPF/HelloWorldWPF/HelloWorldWPF/MainWindow.xaml
+++ b/WPF/HelloWorldWPF/HelloWorldWPF/MainWindow.xaml
@@ -5,11 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HelloWorldWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Label Content="Label" HorizontalAlignment="Left" Margin="92,78,0,0" VerticalAlignment="Top"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="92,192,0,0" VerticalAlignment="Top" Width="75"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="92,140,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        Title="Login" Height="285.121" Width="339.069" WindowStyle="None" FontWeight="Bold" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}">
+    <Grid Margin="0,0,19,19">
+        <Label Content="Login" HorizontalAlignment="Left" Margin="127,37,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Button Content="OK" HorizontalAlignment="Left" Margin="69,188,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="136,96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button Content="Cancel" HorizontalAlignment="Left" Margin="167,188,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click" RenderTransformOrigin="0.159,0.478"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="136,136,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label Content="User Name:" HorizontalAlignment="Left" Margin="59,96,0,0" VerticalAlignment="Top"/>
+        <Label Content="Password:" HorizontalAlignment="Left" Margin="69,136,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
