--- a/WPF/HelloWorldWPF/HelloWorldWPF/WPFmain.xaml
+++ b/WPF/HelloWorldWPF/HelloWorldWPF/WPFmain.xaml
@@ -11,8 +11,8 @@
         <Button Content="Close" HorizontalAlignment="Left" Margin="676,376,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
         <Calendar HorizontalAlignment="Left" Margin="592,32,0,0" VerticalAlignment="Top" Height="159"/>
         <ComboBox HorizontalAlignment="Left" Margin="406,221,0,0" VerticalAlignment="Top" Width="120">
-            <Button/>
-            <CheckBox/>
+            <Button Content="Tom"/>
+            <CheckBox Content="Jerry"/>
             <ListBoxItem/>
             <RadioButton/>
             <Separator/>
